src/theme/input.scss
ion-item.item-input,
ion-item.item {
  --border-color: transparent;
  --highlight-color-focused: transparent;

  &:not(.with-padding) {
    --padding-start: 0;
    --inner-padding-end: 0;
  }

  &.item-radio {
    --padding-start: 0;
    --padding-end: 0;
    --inner-padding-start: 8px;
    --inner-padding-end: 8px;
  }

  &:has(input[type="color"]) {
    padding: 0;
  }

  input[type="color"] {
    height: 48px;
    width: 100%;
    background: var(--ion-color-light);
    border: 0;
  }

  ion-input[class*="sc-ion-input"],
  ion-textarea[class*="sc-ion-textarea"],
  div.MuiFormControl-root,
  ion-select {
    --padding-start: 8px;
    --background: var(--ion-color-light);
    background: var(--ion-color-light);
    border: 1px solid var(--ion-color-card-border);
    border-radius: 4px;

    --placeholder-opacity: 0.33;

    &.has-focus input {
      caret-color: var(--ion-text-color);
    }
  }

  ion-select {
    min-width: 100%;
    height: calc(100% - 4px);
    padding-right: 16px;

    &.ios {
      height: 46px;
    }
  }

  div.MuiFormControl-root {
    width: 100%;
    font-size: inherit;
    font-family: inherit;
    line-height: inherit;

    div.MuiPickersSectionList-root {
      padding: 12px 0;
    }

    div.MuiPickersInputBase-root,
    div.MuiInputAdornment-root,
    button.MuiButtonBase-root {
      padding: 0 10px;
      color: inherit;

      &::before {
        border: none;
      }

      &::after {
        border-bottom: none;
      }

      input {
        padding: 10px 8px;
      }
    }
  }
}

ion-list[class*="list"].inputs-list {
  background: transparent;
  contain: inherit;

  ion-item {
    --background: transparent;
    --background-focused: transparent;

    &.item-title {
      height: 38px;
      --border-color: transparent;

      --padding-start: 0;
      --inner-padding-end: 0;

      font-weight: 300;
    }
  }

  div.item-split {
    display: grid;
    grid-template-columns: repeat(2, calc((100% - 8px) / 2));
    width: 100%;
    grid-column-gap: 8px;
  }
}

